# sign-api

./: .env.example  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  readme.md  requirements.txt
.github/workflows/: django.yml
api/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
api/errors/: erros.py
api/migrations/: 0001_initial.py  0002_rename_openid_document_open_id_alter_document_status_and_more.py  0003_remove_signer_token.py  0004_signer_token_alter_document_company_id_and_more.py  0005_rename_company_id_document_company_and_more.py  0006_alter_document_status_alter_signer_document_and_more.py  0007_alter_document_company.py
api/repositories/: company.py  document.py  signer.py  zapsign.py
sign/: settings.py  urls.py
