[tool.poetry]
name = "sign-api"
version = "0.1.0"
package-mode = false
description = ""
authors = ["Mateus Henrique <mateushenriquechaves1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
django = "5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
